# geothermal_research

./: README.md  main.ipynb  pyproject.toml  requirements.txt
2m_temperature_probe_INGENIOUS_regional_data/: 2m_temperature_probe.xlsx  README.txt
faults_quaternary_INGENIOUS_regional_data/: faults_quaternary_regional.sbn  faults_quaternary_regional.sbx  faults_quaternary_regional.shp.xml  faults_quaternary_regional.shx
geodetics_INGENIOUS_regional_data/: README.txt  strain_rate_model_details.docx
great_basin_q_volcanics/: great_basin_flows.sbn  great_basin_flows.sbx  great_basin_flows.shp.xml  great_basin_flows.shx  great_basin_vents.dbf  great_basin_vents.sbn  great_basin_vents.sbx  great_basin_vents.shp  great_basin_vents.shp.xml  great_basin_vents.shx
paleo_geothermal_regional/: Paleo_geothermal_final.csv  Paleo_geothermal_final.dbf  Paleo_geothermal_final.sbn  Paleo_geothermal_final.sbx  Paleo_geothermal_final.shp  Paleo_geothermal_final.shx
qfaults_ingenious_nad83conus117_2023-06-27/: README_fielddefinitions_qfaults_ingenious_nad83conus117_2023-06-27.txt  qfaults_ingenious_nad83conus117_2023-06-27.prj  qfaults_ingenious_nad83conus117_2023-06-27.sbn  qfaults_ingenious_nad83conus117_2023-06-27.sbx  qfaults_ingenious_nad83conus117_2023-06-27.shp.xml  qfaults_ingenious_nad83conus117_2023-06-27.shx
seismicity_INGENIOUS_regional_data/: eq_rate_density_details.docx  eq_scale.tif.lyr
study_area_boundary_INGENIOUS_regional_data_bp1/: GB_study_area_NAD83.dbf  GB_study_area_NAD83.sbn  GB_study_area_NAD83.sbx  GB_study_area_NAD83.shp  GB_study_area_NAD83.shp.xml  (+1 more)
(+149 files in other folders)
