[project]
name = "ingenious"
version = "0.1.0"
description = ""
authors = [
    {name = "Joe Klinck",email = "jklinck76@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "geopandas (>=1.1.3,<2.0.0)",
    "rasterio (>=1.5.0,<2.0.0)",
    "matplotlib (>=3.11.0,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
ipykernel = "^7.3.0"

